# SysY_Compiler

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: IR.h  createTree.h  includeLex.h
src/: CMakeLists.txt  main_test.c  main_test.cpp
src/AST2IR/: AST2IR.cpp  AST2IR.h  CMakeLists.txt  README.md
src/Backend/: CMakeLists.txt  IR2ASM.cpp  IR2ASM.h
src/Optimizer/: README.md
src/Optimizer/RDF/: RDF.h
src/Optimizer/RMLoad/: RMLoad.cpp  RMLoad.h
src/Optimizer/SSA/: SSA.cpp  SSA.h
src/SysY_Lex/: CMakeLists.txt  SysY_Lex.h  SysY_Lex.l  lex.yy.c
src/SysY_Yacc/: CMakeLists.txt  CreateTree.c  SysY_Yacc.h  SysY_Yacc.tab.c  SysY_Yacc.tab.h  SysY_Yacc.y
test/: 1.sy  2.sy  3.sy  4.sy  5.sy  6.sy  7.sy  test.py  test1.sy  test1_out2  test2.sy  testAll.sh  test_out
